--- a/src/client/src/styles/Header.css
+++ b/src/client/src/styles/Header.css
@@ -8,19 +8,20 @@
   height: 40vh;
   color: white;
 
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header h1 {
-  font-family: "Montserrat";
-  font-size: 48px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 64px;
+  padding: 0;
 }
 
 .header h2 {
-  font-family: 'Cinzel';
-}
-
-.header span {
-  vertical-align: middle;
-  display: inline-block;
+  font-family: "Cinzel";
+  font-size: 32px;
+  font-weight: 500;
+  padding: 0;
 }
